Fixed an overlapping issue in the stylesheet elements

--- a/polls/static/polls/public.css
+++ b/polls/static/polls/public.css
@@ -13,11 +13,9 @@ body {
 
 #polls {
     text-align: center;
-    position: absolute;
+    margin: 5% auto;
     width: 50%;
     height: 50%;
-    left: 25%;
-    top: 25%;
     background-color: #3D3D3D;
     box-shadow: -2px 3px 20px #888888;
     overflow-y: scroll;
